--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -39,7 +39,8 @@ stages:
       RUN wget -O- https://github.com/aquasecurity/trivy/releases/download/v${TRIVY_VERSION}/trivy_${TRIVY_VERSION}_Linux-64bit.tar.gz | \
           tar -xzf - -C / \
           && /trivy --version \
-          && /trivy --light --no-progress --download-db-only --cache-dir /trivy-cache
+          && /trivy --light --no-progress --download-db-only --cache-dir /trivy-cache \
+          && /trivy --severity CRITICAL --light --skip-update --no-progress --ignore-unfixed --cache-dir /trivy-cache alpine:3.11
 
       FROM scratch
 
