Upgrade alpine and trivy (#12)
* upgrade trivy to fix vulunerability, upgrade base alpine image

* ignore CVE vulnerability, until trivy release the fix, already created to them an issue report

Co-authored-by: Mo Alsharbaji <malsharbaji@travix.com>

--- a/.trivyignore
+++ b/.trivyignore
@@ -1,2 +1,3 @@
-# awaiting release of https://github.com/aquasecurity/trivy/issues/1226
-CVE-2021-32760
+# awaiting to fix https://github.com/aquasecurity/trivy/issues/1523
+CVE-2021-41092
+CVE-2021-41103
