--- a/.trivyignore
+++ b/.trivyignore
@@ -1,3 +1,5 @@
 # awaiting to fix https://github.com/aquasecurity/trivy/issues/1523
 CVE-2021-41092
 CVE-2021-41103
+# awaiting to fix https://github.com/aquasecurity/trivy/issues/1870
+GMS-2022-20
