--- a/.trivyignore
+++ b/.trivyignore
@@ -1,3 +1,10 @@
 # awaiting to fix https://github.com/aquasecurity/trivy/issues/1523
 CVE-2021-41092
 CVE-2021-41103
+
+# awaiting google/cloud-sdk upgrade versions
+CVE-2020-16845
+CVE-2021-29482
+
+# awaiting Trivy to upgrade the version on fixed issue https://github.com/bitnami-labs/sealed-secrets/issues/830
+CVE-2022-27191
