--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -73,7 +73,7 @@ stages:
         container: docker-test-2
         noCachePush: true
         inline: |
-          FROM golang:1.17-alpine AS builder
+          FROM golang:1.18-alpine AS builder
 
           RUN apk update \
               && apk add --no-cache --upgrade \
@@ -81,7 +81,7 @@ stages:
               && rm -rf /var/cache/apk/* \
               && git version
 
-          FROM golang:1.16-alpine
+          FROM golang:1.17-alpine
 
           LABEL maintainer="estafette.io"
 
@@ -100,7 +100,7 @@ stages:
         no-cache: true
         container: hugo-test
         inline: |
-          FROM extensions/docker:latest
+          FROM extensions/docker:dev
 
           COPY ca-certificates.crt /etc/ssl/certs/
           COPY publish /publish
