add CVE-2022-27191 in trivy ignore

--- a/.estafette.yaml
+++ b/.estafette.yaml
@@ -101,6 +101,8 @@ stages:
         container: hugo-test
         inline: |
           FROM extensions/docker:dev
+          RUN rm -rf google-cloud-sdk/bin/anthoscli \
+              && rm -rf /var/cache/apk/* 
 
           COPY ca-certificates.crt /etc/ssl/certs/
           COPY publish /publish
