--- a/.trivyignore
+++ b/.trivyignore
@@ -1,2 +1,8 @@
-# https://github.com/aquasecurity/trivy/issues/2350
+CVE-2022-23524
+CVE-2022-23525
+CVE-2022-23526
 CVE-2022-23648
+CVE-2022-3515
+CVE-2022-40897
+CVE-2022-40898
+CVE-2022-43551
